[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleqlearn"
version = "0.1.0"
description = "A tiny Q-learning update function for RL beginners."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "YOUR_NAME", email = "YOUR_EMAIL"}]
keywords = ["reinforcement-learning", "q-learning", "education", "rl"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/simpleqlearn"
Repository = "https://github.com/YOUR_GITHUB_USERNAME/simpleqlearn"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/simpleqlearn/issues"
